<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_regist"
        android:stretchColumns="1" >

        <!-- 用户名 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/str_loginName"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etxt_loginName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/str_loginName_hint"
                android:maxWidth="400dp" />
        </TableRow>
        
        <View  
            android:layout_height="1dip"  
            android:background="#B7B7B7" />  
        <!-- 密码 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/str_password"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etxt_password"
                android:password="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/str_password_hint"
                android:maxWidth="400dp" />
        </TableRow>
        
        <View  
            android:layout_height="1dip"  
            android:background="#B7B7B7" />  
        <!-- 重复密码 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/str_repassword"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etxt_repassword"
                android:password="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/str_repassword_hint"
                android:maxWidth="400dp" />
        </TableRow>
        
        <View  
            android:layout_height="1dip"  
            android:background="#B7B7B7" />  
        <!-- Email -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/str_email"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:hint="@string/str_email_hint"
                android:maxWidth="400dp" />
        </TableRow>
        
        <View  
            android:layout_height="1dip"  
            android:background="#B7B7B7" />  
        <!-- 确定或重置按钮 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btn_regist"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/str_sure"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>

</LinearLayout>